[package]
name = "just-learn-just-build-tools"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.18"
colored = "2.1"
handlebars = "5.1"
chrono = "0.4"
anyhow = "1.0"
walkdir = "2.4"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "bundle"
path = "src/bin/bundle.rs"

[[bin]]
name = "test-runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "smoke-test"
path = "src/bin/smoke_test.rs"

[[bin]]
name = "render-all-questions"
path = "src/bin/render_all_questions.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
